# QCalculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
calculation/: CMakeLists.txt
calculation/include/history/: history.hpp
calculation/include/menu/: facade.hpp
calculation/include/parsing/: parser.hpp  states.hpp
calculation/include/sorting/: sort_command_manager.hpp  sort_commands.hpp  sorter.hpp
calculation/source/: cleaner.cpp
calculation/source/history/: history.cpp
calculation/source/menu/: facade.cpp
calculation/source/parsing/: parser.cpp  states.cpp
calculation/source/sorting/: sort_commands.cpp  sort_context.cpp  sorter.cpp
calculation/source/tokenization/: tokenizer.cpp
cli/: CMakeLists.txt
cli/include/: commands.hpp  menu.hpp
cli/source/: commands.cpp  main.cpp  menu.cpp
gui/: CMakeLists.txt  resources.qrc
gui/forms/: mainwindow.ui
gui/include/: MainWindow.hpp  OutputLine.hpp  mainwindow.hpp  output_line.hpp
gui/source/: MainWindow.cpp  OutputLine.cpp  main.cpp  mainwindow.cpp  output_line.cpp
include/: calculator.hpp  cleaner.hpp  command_manager.hpp  commands.hpp  facade.hpp  lexer.hpp  lexer_context.hpp  sorter.hpp  states.hpp  token_manager.hpp  tokenizer_context.hpp  tokens.hpp
include/cli/: commands.hpp
include/computation/: calculator.hpp
include/gui/: mainwindow.hpp
include/parsing/: extended_tokens.hpp  states.hpp
include/sorting/: sort_command_manager.hpp  sort_commands.hpp  sorter.hpp
include/tokenization/: context.hpp  manager.hpp  state_factory.hpp  states.hpp  tokens.hpp
include/translating/: commands.hpp  translator.hpp
source/: calculator.cpp  cleaner.cpp  command_manager.cpp  commands.cpp  facade.cpp  lexems.cpp  lexer.cpp  lexer_context.cpp  sort_command_manager.cpp  sort_commands.cpp  sorter.cpp  states.cpp  token_manager.cpp  tokenizer_context.cpp  tokens.cpp
source/cli/: commands.cpp  main.cpp  menu.cpp
source/computation/: calculator.cpp
source/gui/: mainwindow.cpp
source/history/: history.cpp
source/parsing/: extended_tokens.cpp  parser.cpp  parser_context.cpp  states.cpp
source/sorting/: command_manager.cpp  commands.cpp  sort_command_manager.cpp  sort_commands.cpp  sorter.cpp
source/tokenization/: context.cpp  manager.cpp  states.cpp  tokens.cpp
source/translating/: command_manager.cpp  commands.cpp  translator.cpp
test/: calculations.cpp  sorting.cpp  tokenization.cpp
tests/: calculations.cpp  computations.cpp  first.cpp  parsing.cpp  sorting.cpp  tokenization.cpp
